<resources>
    <string name="app_name">ADCO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar Sesion</string>

    <!-- Main navigation (bottom) -->
    <string name="menu_home">Inicio</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_companies">Empresas</string>

    <!-- Drawer navigation -->
    <string name="menu_contact_us">Contactanos</string>
    <string name="menu_service_payment">Pago de servicio</string>
    <string name="menu_adco_tutorials">Tutoriales ADCO</string>
    <string name="menu_adco_manual">Manual ADCO</string>
    <string name="login_email_input">Correo</string>
    <string name="login_pass_input">Contraseña</string>
    <string name="login_enter_button">Entrar</string>
    <string name="login_register_button">Registrar</string>
    <string name="client_name_placeholder">Name</string>
    <string name="no_results">No hay resultados</string>
    <string name="search">buscar</string>
    <string name="name">Nombre</string>
    <string name="address">Dirección</string>
    <string name="phone_number">Teléfono</string>
    <string name="new_client">Nuevo Cliente</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="client_add_name_error">Ingrese el nombre</string>
    <string name="client_add_address_error">Ingrese la dirección</string>
    <string name="client_add_phone_number_error">Ingrese el teléfono</string>
    <string name="client_add_success">El cliente se agregó exitosamente</string>
    <string name="block_client_description">Bloquear a un cliente</string>
    <string name="unblock_client_description">Desbloquear a un cliente</string>
    <string name="block">Bloquear</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="block_client_confirmation_message">¿Seguro que deseas bloquear a este cliente?</string>
    <string name="unblock">Desbloquear</string>
    <string name="unblock_client_confirmation_message">¿Seguro desea desbloquear a este cliente?</string>
    <string name="edit_client_description">Editar a un cliente</string>
    <string name="edit_client">Editar Cliente</string>
    <string name="client_edit_success">El cliente ha sido editado correctamente</string>
</resources>
